--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
     <h2>Mama i can code now</h2>
     <h3>New code changed</h3>
     <h4>I can do it</h4>
+    <p>More paragraph</p>
+    <p>I am coding coding and coding</p>
+    <link rel="stylesheet" href="style.css">
 </body>
 </html>
