--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>My second github repo</title>
 </head>
 <body>
-    <h1>I can push to github</h1>
+    <h1>I can push to github.com again and again and again</h1>
     <h2>Mama i can code now</h2>
     <h3>New code changed to orange</h3>
     <h4>I can do it</h4>
